kubernetes/system/wazuh/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wazuh-dashboard
  namespace: wazuh
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`wazuh.cluster.afflair.app`)
      kind: Rule
      services:
        - name: dashboard
          port: 443
          scheme: https
          serversTransport: wazuh-transport
  tls:
    certResolver: letsencrypt
